turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:19: error: not found: value faireMaisson
    faireMaisson(30)
    ^