turtleart.lessons.turtleart.Main.HouseThree.scala.code

def faireMaison(taille:Int) = {
   baisseCrayon()
  avance(taille)
  droite(30)
  avance(taille)
  for (i<- 1 to 2 ) {
  droite(120)
  avance(taille)
  }
  droite(180)
  for (i <- 1 to 3) {
    avance(taille)
    droite(90)
  }
}
override def run() {
  for (i <- 1 to 4) {
    faireMaisson(30)
    droite(90)
    avance(50)
    gauche(90)
  }
}